[gd_scene load_steps=13 format=3 uid="uid://4vddpb1j2ern"]

[ext_resource type="Script" path="res://towers/pill_dispenser.gd" id="1_37sj6"]
[ext_resource type="PackedScene" uid="uid://pl4k47hrrmrv" path="res://projectiles/supplement.tscn" id="2_fnbpy"]
[ext_resource type="Texture2D" uid="uid://bs3a21ckhywul" path="res://artAssets/shadow16px.png" id="3_yhxx2"]
[ext_resource type="Texture2D" uid="uid://7nblq4a2o60k" path="res://artAssets/tower/pillDispenser.png" id="4_l3fxm"]
[ext_resource type="Texture2D" uid="uid://dj42s32vw5870" path="res://artAssets/uiElements/128pxAreaIndicator.png" id="5_pi504"]
[ext_resource type="Texture2D" uid="uid://cco3v0y1jgtdg" path="res://artAssets/uiElements/towerBarUnderlay.png" id="6_hkff7"]
[ext_resource type="Texture2D" uid="uid://k81vrojl8vo0" path="res://artAssets/uiElements/towerBarProgress.png" id="7_wm4ak"]

[sub_resource type="CircleShape2D" id="CircleShape2D_y83y4"]
radius = 64.0

[sub_resource type="Animation" id="Animation_t6ovh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rangeIndicator:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rangeIndicator:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("rangeIndicator:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_y0c1t"]
resource_name = "attack"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("tower:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_gbj8c"]
resource_name = "placing"
length = 12.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rangeIndicator:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6, 12),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 3.14159, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rangeIndicator:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4, 6, 8, 10, 12),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rangeIndicator:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_enryn"]
_data = {
"RESET": SubResource("Animation_t6ovh"),
"attack": SubResource("Animation_y0c1t"),
"placing": SubResource("Animation_gbj8c")
}

[node name="pillDispenser" type="Area2D"]
script = ExtResource("1_37sj6")
damage = 1
cooldown = 5.0
projectileScene = ExtResource("2_fnbpy")
towerCost = 10
splash_range = 32

[node name="shadow" type="Sprite2D" parent="."]
texture = ExtResource("3_yhxx2")
offset = Vector2(0, 2)

[node name="tower" type="Sprite2D" parent="."]
texture = ExtResource("4_l3fxm")
offset = Vector2(0, -8)

[node name="rangeIndicator" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_pi504")

[node name="targetRange" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_y83y4")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ProjectileSpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, -8)

[node name="cooldownbar" type="TextureProgressBar" parent="."]
offset_left = -8.0
offset_top = -28.0
offset_right = 8.0
offset_bottom = -24.0
max_value = 1.0
step = 0.1
value = 1.0
texture_under = ExtResource("6_hkff7")
texture_progress = ExtResource("7_wm4ak")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_enryn")
}
autoplay = "RESET"

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
